@startuml

' các class Application và Initializable của java có sẵn liệu có phải vẽ vào k

skinparam ClassAttributeIconSize 0

class Main {
}

class SceneController {
}

abstract class Algorithm {
}

class CutVertexBridgeFinding{
}

class DFS{
}

class TopologicalSort{
}

class Edge{
}

class Graph{
}

class Vertex{
}

class VertexController{
}

class Context{
}

class DetailStep{
}

class PseudoStep{
}

class Step{
}

' Graph --^ Vertex
DFS --^ Algorithm
TopologicalSort --^ Algorithm
CutVertexBridgeFinding --^ Algorithm
Algorithm ..> Vertex
Algorithm ..> Edge
Context ..> Edge
Step ..> Edge
Step ..> Vertex
SceneController o-- Context
SceneController o-- Graph
SceneController *-- Edge
Algorithm o-- Graph
Algorithm o-- Step

CutVertexBridgeFinding *-- Vertex
DFS *-- Vertex
TopologicalSort o-- Vertex

Graph *-- Vertex
Vertex o-- VertexController
Context o-- Algorithm
DetailStep *-- Vertex
DetailStep *-- Edge
Step o-- DetailStep
Step o-- PseudoStep


@enduml


